--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,51 +2,52 @@
   <div class="container-form-login">
     <div class="row">
       <div class="col-xs-12 col-sm-6 col-sm-offset-3">
-
           <div class="form-style-10">
-              <h1>Edit your profile</h1>
+            <h1>Edit your profile</h1>
 
-
-            <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-            <%= f.error_notification %>
+              <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+              <%= f.error_notification %>
             <div class="section"><span>1</span>Your profile</div>
 
             <div class="inner-wrap">
-            <div class="form-inputs">
-              <%= f.input :first_name %>
-              <%= f.input :photo %>
-              <%= f.input :photo_cache, as: :hidden %>
-                <!-- <form action="">
-                <label> I'm a:<br>
-                <input type="radio" name="gender" value="male"> Male<br>
-                <input type="radio" name="gender" value="female"> Female<br>
-                </label>
-                </form> -->
+              <div class="form-inputs">
+                <%= f.input :first_name %>
 
-            <div class="form-checkbox">
-              <label class="control-label file optional"> I'm a: </label>
-
-              <%= f.radio_button :gender, value: "woman" %><br>
-              <%= f.label "Woman" %>
-              <%= f.radio_button :gender, value: "man" %><br>
-              <%= f.label "Man" %>
-            </div><br>
-             <div class="form-checkbox">
-              <label class="control-label file optional"> Interested in: </label>
-                <%= f.radio_button :interested_in, value: "women" %><br>
-                <%= f.label "Women" %>
-                <%= f.radio_button :interested_in, value: "men" %><br>
-                <%= f.label "Men" %>
-                <%= f.radio_button :interested_in, value: "both" %><br>
-                <%= f.label "Both" %>
-            </div>
-            </div>
+                <div class="form-checkbox">
+                  <label class="control-label file optional"> I'm a: </label>
+                  <%= f.radio_button :gender, value: "woman" %><br>
+                  <%= f.label "Woman" %>
+                  <%= f.radio_button :gender, value: "man" %><br>
+                  <%= f.label "Man" %>
+                </div><br>
+                 <div class="form-checkbox">
+                  <label class="control-label file optional"> Interested in: </label>
+                    <%= f.radio_button :interested_in, value: "women" %><br>
+                    <%= f.label "Women" %>
+                    <%= f.radio_button :interested_in, value: "men" %><br>
+                    <%= f.label "Men" %>
+                    <%= f.radio_button :interested_in, value: "both" %><br>
+                    <%= f.label "Both" %>
+                </div>
+              </div>
             </div>
 
-            <div class="section"><span>2</span>Description</div>
+            <div class="section"><span>2</span>Your profile picture</div>
+            <div class="inner-wrap">
+              <div class="display-photo">
+                <% if current_user.photo.path.nil? || current_user.photo.nil? %>
+                  <img src=<%= current_user.spotify_photo %> class="image-edit" >
+                <% else %>
+                  <%= cl_image_tag current_user.photo, crop: :fill, class: "image-edit" %>
+                <% end %>
+                <%= f.input :photo, label: "Do you want to change you profile picture?"  %>
+                <%= f.input :photo_cache, as: :hidden %>
+              </div>
+            </div>
+
+            <div class="section"><span>3</span>Description</div>
             <div class="inner-wrap">
               <%= f.input :description %>
-
             </div>
 
 
