fixed card scrolling

--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -28,7 +28,7 @@
     <!-- This is the hidden "more info" card-->
 
   <div class="flybox-wrap" id="off">
-    <div class="card" >
+    <div class="card scrollable" >
 <!--       <div class="animated fadeInRight">
       <div class="card scrollable hidden" id="more-info"> -->
       <h4>Artists in common: </h4>
