--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -66,11 +66,12 @@
         <% end %>
       <% end %>
       <div class="date-btns">
-        <%= link_to "Not interested", match_path(@match, {match:{hide: true}}), method: :put, class: "btn btn-not" %>
+
+        <%= link_to "Not interested", match_path(@match, {match:{hide: true}}), method: :patch, class: "btn btn-not" %>
         <% if @match.asker.nil? %>
-          <%= link_to "Ask out!", match_path(@match, {match:{asker: @user.id}}), method: :put, class: "btn btn-date" %>
+          <%= link_to "Ask out!", match_path(@match, {match:{asker: @user.id}}), method: :patch, class: "btn btn-date" %>
         <% else %>
-          <%= link_to "Ask out!", match_path(@match, {match:{receiver: @user.id}}), method: :put, class: "btn btn-date" %>
+          <%= link_to "Ask out!", match_path(@match, {match:{receiver: @user.id}}), method: :patch, class: "btn btn-date" %>
         <% end %>
 
 <!--         </div>
