--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,6 +1,5 @@
 // Import Google fonts
-@import url("https://fonts.google.com/selection?selection.family=Oxygen:400,700|Quicksand:400,500,700");
-
+@import url('https://fonts.googleapis.com/css?family=Oxygen:300,400,700|Quicksand:300,400,500,700&subset=latin-ext');
 // Define fonts for body and headers
 $body-font: "Oxygen", sans-serif;
 $headers-font: "Quicksand", sans-serif;
