--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -99,9 +99,9 @@ figure.snip1477 h2 {
 figure.snip1477 h4 {
   display: block;
   font-weight: 700;
-  background-color: #ffffff;
+  background-color: $grey-back;
   padding: 5px 10px;
-  color: #000000;
+  color: white;
 }
 figure.snip1477 figcaption {
   position: absolute;
