--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -1,66 +1,73 @@
-<div class="container-inbox">
+<div class="main">
   <h2>Hi, <%= @user.first_name %>!</h2>
-  <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-    <h4>They asked you out:</h4>
-    <ul class="inbox">
-      <% @match_requests.each do |match_request| %>
-        <li class="message">
-          <% if User.find(match_request.asker).photo.path.nil? %>
-            <img src=<%= User.find(match_request.asker).spotify_photo %> height="80", width="80", class="avatar" >
-          <% else %>
-            <%= cl_image_tag User.find(match_request.asker).photo, height: 80, width: 80, crop: :fill, gravity: :face, class: "avatar" %>
-          <% end %>
-
-          <div class="message-name">
-            <h3><%= User.find(match_request.asker).first_name %></h3>
-            <h3><%= link_to "See match", match_path(@user) %></h3>
-          </div>
-          <div class="message-status">
-            Wanna go on a date?
-          </div>
-        </li>
-      <% end %>
-    </ul>
-  </div>
-  <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-    <h4>You've matched:</h4>
-    <ul class="inbox">
-      <% @matches_done.each do |match_done| %>
-        <li class="message">
-
-          <% if match_done.asker == @user.id %>
-            <% if User.find(match_done.receiver).photo.path.nil? %>
-              <%= image_tag User.find(match_done.receiver).spotify_photo, height: 80, width: 80, crop: :fill, gravity: :face, class: "avatar" %>
+  <div class="tab-container">
+    <div class="top abw">
+      <ul class="menu abw">
+        <li class="selected" data-tab="tab-1">Requests</li>
+        <li data-tab="tab-2">Matches</li>
+      </ul>
+    </div>
+    <div class="tab-content is-active" id="tab-1">
+      <!-- <div class="col-xs-12 col-sm-10 col-sm-offset-1"> -->
+        <ul class="inbox">
+          <% @match_requests.each do |match_request| %>
+          <li class="message">
+            <% if User.find(match_request.asker).photo.path.nil? %>
+              <img src=<%= User.find(match_request.asker).spotify_photo %> height="80", width="80", class="avatar" >
             <% else %>
-              <%= cl_image_tag User.find(match_done.receiver).photo, height: 80, width: 80, crop: :fill, gravity: :face, class: "avatar" %>
+              <%= cl_image_tag User.find(match_request.asker).photo, height: 80, width: 80, crop: :fill, gravity: :face, class: "avatar" %>
             <% end %>
+            <div class="message-name">
+              <h3><%= User.find(match_request.asker).first_name %></h3>
+              <h3><%= link_to "See match", match_path(@user) %></h3>
+            </div>
+            <div class="message-status">
+              Wanna go on a date?
+            </div>
+          </li>
+          <% end %>
+        </ul>
+    </div>
 
-          <div class="message-name">
-            <h3><%= User.find(match_done.receiver).first_name %></h3>
-          </div>
 
-
-          <% else %>
-
-            <% if User.find(match_done.asker).photo.nil? %>
-              <%= image_tag User.find(match_done.asker).spotify_photo, height: 80, width: 80, crop: :fill, gravity: :face, class: "avatar" %>
-            <% else %>
-              <%= cl_image_tag User.find(match_done.asker).photo, height: 80, width: 80, crop: :fill, gravity: :face, class: "avatar" %>
+    <div class="tab-content" id="tab-2">
+       <!--  <div class="col-xs-12 col-sm-10 col-sm-offset-1"> -->
+      <ul class="inbox">
+        <% @matches_done.each do |match_done| %>
+          <li class="message">
+            <% if match_done.asker == @user.id %>
+              <% if User.find(match_done.receiver).photo.path.nil? %>
+                <%= image_tag User.find(match_done.receiver).spotify_photo, height: 80, width: 80, crop: :fill, gravity: :face, class: "avatar" %>
+              <% else %>
+                <%= cl_image_tag User.find(match_done.receiver).photo, height: 80, width: 80, crop: :fill, gravity: :face, class: "avatar" %>
               <% end %>
 
-          <div class="message-name">
-            <h3><%= User.find(match_done.asker).first_name %></h3>
-          </div>
+            <div class="message-name">
+              <h3><%= User.find(match_done.receiver).first_name %></h3>
+            </div>
 
-          <% end %>
+            <% else %>
 
+              <% if User.find(match_done.asker).photo.nil? %>
+                <%= image_tag User.find(match_done.asker).spotify_photo, height: 80, width: 80, crop: :fill, gravity: :face, class: "avatar" %>
+              <% else %>
+                <%= cl_image_tag User.find(match_done.asker).photo, height: 80, width: 80, crop: :fill, gravity: :face, class: "avatar" %>
+              <% end %>
+            <div class="message-name">
+              <h3><%= User.find(match_done.asker).first_name %></h3>
+            </div>
 
-          <div class="message-status">
-            What next?
-          </div>
-        </li>
-      <% end %>
-    </ul>
+            <% end %>
+
+            <div class="message-status">
+              What next?
+            </div>
+          </li>
+        <% end %>
+      </ul>
+    </div>
   </div>
 </div>
+
+
 
