--- a/app/views/rdvs/index.html.erb
+++ b/app/views/rdvs/index.html.erb
@@ -1,8 +1,15 @@
-<div class="container-inbox">
+<div class="main">
   <h2>Hi, <%= @user.first_name %>!</h2>
-  <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-    <h4>They asked you out:</h4>
-    <ul class="inbox">
+  <div class="tab-container">
+    <div class="top abw">
+      <ul class="menu abw">
+        <li class="selected" data-tab="tab-1">Requests</li>
+        <li data-tab="tab-2">Matches</li>
+      </ul>
+    </div>
+    <div class="tab-content is-active" id="tab-1">
+      <!-- <div class="col-xs-12 col-sm-10 col-sm-offset-1"> -->
+      <ul class="inbox">
       <% @rdvs_requests.each do |rdv_request| %>
         <li class="message">
           <% if User.find(rdv_request.asker).photo.path.nil? %>
@@ -21,10 +28,12 @@
         </li>
       <% end %>
     </ul>
-  </div>
-  <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-    <h4>You've matched:</h4>
-    <ul class="inbox">
+    </div>
+
+
+    <div class="tab-content" id="tab-2">
+       <!--  <div class="col-xs-12 col-sm-10 col-sm-offset-1"> -->
+      <ul class="inbox">
       <% @rdvs_done.each do |rdv_done| %>
         <li class="message">
 
@@ -61,6 +70,9 @@
         </li>
       <% end %>
     </ul>
+    </div>
   </div>
 </div>
+
+
 
