--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -29,7 +29,7 @@
         <div class="border-light"></div>
       <li><%= link_to "Messages", "#", class: "sidebar-link" %></li>
         <div class="border-light"></div>
-      <li><%= link_to "Dates", "/matches", class: "sidebar-link" %></li>
+      <li><%= link_to "Dates", "/rdvs", class: "sidebar-link" %></li>
       <div class="border-light"></div>
       <li>
         <div class="sidebar-link"><%= link_to destroy_user_session_path, method: :delete do %>
