--- a/app/views/rdvs/index.html.erb
+++ b/app/views/rdvs/index.html.erb
@@ -22,7 +22,7 @@
             <h3><%= link_to "See match", match_path(@user) %></h3>
           </div>
           <div class="message-status">
-            <%= link_to "Accept Date", accept_rdv_path(rdv_request), class: "btn btn-date" %>
+            <%= link_to "Accept Date", accept_rdv_path(rdv_request), class: "btn btn-primary" %>
           </div>
         </li>
       <% end %>
@@ -35,8 +35,8 @@
       <ul class="inbox">
       <% @rdvs_done.each do |rdv_done| %>
         <li class="message">
-
-          <% if rdv_done.asker == @user.id %>
+          <% binding.pry %>
+          <% if rdv_done.asker == @user %>
             <% if User.find(rdv_done.receiver).photo.path.nil? %>
               <%= image_tag User.find(rdv_done.receiver).spotify_photo, height: 80, width: 80, crop: :fill, gravity: :face, class: "avatar" %>
             <% else %>
