--- a/app/assets/stylesheets/pages/_devise.scss
+++ b/app/assets/stylesheets/pages/_devise.scss
@@ -53,6 +53,9 @@ a:hover {
 
 
 .image-edit {
+  width:240px;
+  height:240px;
+  object-fit: cover;
   margin-left: 25%;
   padding-bottom: 25px;
 }
