added conversation/rdv relation

--- a/app/views/rdvs/index.html.erb
+++ b/app/views/rdvs/index.html.erb
@@ -63,7 +63,7 @@
 
 
           <div class="message-status">
-            What next?
+            <%= link_to "Send a message", conversation_message_path(rdv_done.conversation) %>
           </div>
         </li>
       <% end %>
