--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,7 +13,7 @@
       </div>
     </div>
     <figcaption>
-      <p>We know music is important to you. That is why Lovify helps you find people with similar musical tastes.</p>
+      <p>We know music is important to you. Lovify helps you find people who have similar musical tastes.</p>
     </figcaption>
   </figure>
   <figure class="snip1477">
@@ -24,7 +24,7 @@
       </div>
     </div>
     <figcaption>
-      <p>Just sign up with Spotify, and we'll do the rest. We use your Spotify listens to find your perfect music match.</p>
+      <p>Just sign up with Spotify and we'll do the rest. We use your Spotify listens to find your perfect music match.</p>
     </figcaption>
   </figure>
   <figure class="snip1477">
@@ -35,7 +35,7 @@
       </div>
     </div>
     <figcaption>
-      <p>Don't be shy! Ask your match out. We will find concerts, bars and events that match your common interests for you. </p>
+      <p>Don't be shy! Ask your match out. We will suggest a selection of bars according to what you both listen to.</p>
     </figcaption>
   </figure>
 </div>
