better text in home cards

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,25 +2,25 @@
 <div class="body body-home">
 <div class="container container-home">
 
-  <h2 class="title">Find someone who shares your love for music</h2>
+  <h2 class="title">A person’s taste in music says a lot about them</h2>
 
 
   <figure class="snip1477">
     <img src="https://static.pexels.com/photos/373945/pexels-photo-373945.jpeg" alt="sample38" />
     <div class="title">
       <div>
-        <h4>Find people like you</h4>
+        <h4>Find someone like you</h4>
       </div>
     </div>
     <figcaption>
-      <p>We know music is important to you. Lovify helps you find people who have similar musical tastes.</p>
+      <p>We know music is important to you. Lovify helps you find people who like to listen to the same things as you.</p>
     </figcaption>
   </figure>
   <figure class="snip1477">
     <img src="https://images.pexels.com/photos/340103/pexels-photo-340103.jpeg?w=940&h=650&auto=compress&cs=tinysrgb" alt="sample91" />
     <div class="title">
       <div>
-        <h4>Easy to use</h4>
+        <h4>In one click</h4>
       </div>
     </div>
     <figcaption>
@@ -31,11 +31,11 @@
     <img src="https://images.unsplash.com/photo-1490111718993-d98654ce6cf7?auto=format&fit=crop&w=750&q=80&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D" alt="sample35" />
     <div class="title">
       <div>
-        <h4>Ask people out</h4>
+        <h4>& Ask them out</h4>
       </div>
     </div>
     <figcaption>
-      <p>Don't be shy! Ask your match out. We will suggest a selection of bars according to what you both listen to.</p>
+      <p>Don't be shy! Ask your match out. We will suggest a selection of bars according to what you both listen to. Plus, breaking the ice is easy when you have music to talk about.</p>
     </figcaption>
   </figure>
 </div>
