--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -4,16 +4,19 @@
   <% end %>
 
   <div class="ui segment">
+    <% if @messages.first.id.nil? %>
+      <% binding.pry %>
+      <p>There are no messages between you yet. Don't be shy, say hello!</p>
+    <% end %>
     <% @messages.each do |message| %>
       <% if message.body %>
         <% user = User.find(message.user_id) %>
         <div class="item">
           <div class="content">
-            <div class="header"><strong><%= user.first_name %></strong> <%= message.message_time %></div>
+            <div class="header"><%= user.first_name %></div>
             <div class="list">
               <div class="item">
-                <i class="right triangle icon"></i>
-                <%= message.body %>
+                <p>   > <%= message.body %> </p>
               </div>
             </div>
           </div>
@@ -28,7 +31,7 @@
     </div>
       <%= f.text_field :user_id, value: current_user.id, type: "hidden"  %>
     <div>
-      <%= f.submit "Add Reply", class: "ui blue labeled submit icon button" %>
+      <%= f.submit "Send message", class: "btn btn-primary" %>
     </div>
 
   <% end %>
