--- a/app/views/matches/no_matches.html.erb
+++ b/app/views/matches/no_matches.html.erb
@@ -1,1 +1,55 @@
-No matches left for you :/
+<style>
+    @import url('https://fonts.googleapis.com/css?family=Oxygen:300,400,700%7CQuicksand:300,400,500,700&subset=latin-ext');
+    .container-banner h2 {
+    margin-top: 10px;
+    font-size: 40px;
+    font-weight: lighter;
+    opacity: 0.9;
+    text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
+  }
+    .content-banner {
+      font-family: "Quicksand", sans-serif;;
+    }
+
+    .container-banner {
+      background-color: #212121;
+      color: white;
+      text-align: center;
+      height: 100vh;
+      /* if you have a 70px navbar => height: calc(100vh - 70px); */
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      position: relative;
+    }
+
+    a{
+      font-size: 20px;
+      color: #99378c;
+      text-decoration:none;
+      text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
+    }
+
+    img{
+      height:70px;
+    }
+
+    body {
+    display: block;
+    margin: 0px;
+    }
+  </style>
+
+<div class="main">
+  <body class="rails-default-error-page">
+  <!-- This file lives in public/404.html -->
+  <div class="container container-banner">
+    <div class="content-banner">
+      <img src="https://img15.hostingpics.net/pics/111424lovifylogo.png">
+      <h4 style="font-weight: lighter;">You have no more matches right now.</h3>
+      <h5 style="font-weight: lighter;">But don't worry. You can check again in a little while.</h2>
+      <a href = "/">Back to home page</a>
+    </div>
+  </div>
+</div>
