little modif home btn and no matches page

--- a/app/views/matches/no_matches.html.erb
+++ b/app/views/matches/no_matches.html.erb
@@ -1,7 +1,7 @@
 <style>
     @import url('https://fonts.googleapis.com/css?family=Oxygen:300,400,700%7CQuicksand:300,400,500,700&subset=latin-ext');
     .container-banner h2 {
-    margin-top: 10px;
+    margin-bottom: 10px;
     font-size: 40px;
     font-weight: lighter;
     opacity: 0.9;
@@ -47,9 +47,9 @@
   <div class="container container-banner">
     <div class="content-banner">
       <img src="https://img15.hostingpics.net/pics/111424lovifylogo.png">
-      <h4 style="font-weight: lighter;">You have no more matches right now.</h3>
-      <h5 style="font-weight: lighter;">But don't worry. You can check again in a little while.</h2>
-      <a href = "/">Back to home page</a>
+      <br/><h4 style="font-weight: lighter;">You have no more matches right now <i class="fa fa-frown-o" aria-hidden="true"></i></h4>
+      <h5 style="font-weight: lighter;">But don't worry, you can check again in a little while.</h5>
+      <br/><a href = "/">Back to home page</a>
     </div>
   </div>
 </div>
