--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,4 +1,5 @@
 .container-banner h2 {
+  margin-bottom: 45px;
   font-size: 50px;
   font-weight: lighter;
   opacity: 0.9;
@@ -12,6 +13,10 @@
 }
 .content-banner {
   z-index: 2;
+  .btn{
+    border-radius:4px;
+    border:none;
+  }
 }
 
 .container-banner {
