--- a/app/assets/stylesheets/components/_alert.scss
+++ b/app/assets/stylesheets/components/_alert.scss
@@ -4,10 +4,20 @@
 
 .alert {
   margin-left: 17%;
+  margin-bottom: 0;
   text-align: center;
-  color: white;
+  color: rgba(153, 55, 140, 0.8);
   border: 0px;
 }
+
+.alert-home {
+  margin-left: 0;
+}
+
+.alert-spotify {
+  color:#188c49;
+}
+
 .alert-info {
   background: $grey-card;
 }
