--- a/app/views/matches/no_matches.html.erb
+++ b/app/views/matches/no_matches.html.erb
@@ -47,8 +47,8 @@
   <div class="container container-banner">
     <div class="content-banner">
       <img src="https://img15.hostingpics.net/pics/111424lovifylogo.png">
-      <br/><h4 style="font-weight: lighter;">You have no more matches right now <i class="fa fa-frown-o" aria-hidden="true"></i></h4>
-      <h5 style="font-weight: lighter;">But don't worry, you can check again in a little while.</h5>
+      <br/><h4 style="font-weight: lighter;">No profiles left <i class="fa fa-frown-o" aria-hidden="true"></i></h4>
+      <h5 style="font-weight: lighter;">Come back in a while to see if we've found someone new for you!</h5>
       <br/><a href = "/">Back to home page</a>
     </div>
   </div>
