unread messages count function

--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -23,7 +23,7 @@
         <div class="border-light"></div>
       <li><%= link_to "Start matching", "/next-match", class: "sidebar-link" %></li>
         <div class="border-light"></div>
-      <li><%= link_to "Messages", conversations_path, class: "sidebar-link" %></li>
+      <li><%= link_to "Messages", conversations_path, class: "sidebar-link" %> (<%= unread_messages_count %>)</li>
         <div class="border-light"></div>
       <li><%= link_to "Dates", rdvs_path, class: "sidebar-link" %></li>
       <div class="border-light"></div>
