correction meta tags fb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <title>Lovify</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Lovify helps you find someone who shares your love for music. Match in one click using your Spotify account and go on a date." />
+    <meta property="og:title" content="Lovify | Find your music match" />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="http://www.lovify.top/" />
+    <meta property="og:image" content="https://img15.hostingpics.net/pics/144520lovifyfb.jpg" />
+    <meta property="og:description" content="Lovify helps you find someone who shares your love for music. Match in one click using your Spotify account and go on a date." />
+    <meta property="og:site_name" content="Lovify" />
     <meta name="keywords" content="lovify, love, spotify, match, online, dating, music" />
-    <meta property="og:url"                content="http://www.nytimes.com/2015/02/19/arts/international/when-great-minds-dont-think-alike.html" />
-
-    <meta property="og:type"               content="article" />
-    <meta property="og:title"              content="Lovify | Find your music match" />
-    <meta property="og:description"        content="Lovify helps you find someone who shares your love for music. Match in one click using your Spotify account and go on a date." />
-    <meta property="og:image"              content="https://img15.hostingpics.net/pics/144520lovifyfb.jpg" />
 
     <%= favicon_link_tag 'logo-seul.png' %>
     <%= csrf_meta_tags %>
