favicon and link hover

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,7 +13,7 @@
       </div>
     </div>
     <figcaption>
-      <p>We know music is important to you. Lovify helps you find people who like to listen to the same things as you.</p>
+      <p>We know music is important to you. Lovify helps you find people who like to listen to the same artists and tracks as you.</p>
     </figcaption>
   </figure>
   <figure class="snip1477">
